# sigint-pi

./: .dockerignore  .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  Containerfile.steamdeck  Dockerfile  Dockerfile.mac  Dockerfile.pi  GITHUB_DESCRIPTION.txt  KNOWN_ISSUES.md  LEGAL.md  Makefile  README.md  RELEASE_NOTES_v0.3.0.md  config.toml.example  docker-compose.dev.yml  docker-compose.yml  install-pi.sh  install.sh  mosquitto.conf  podman-compose.steamdeck.yml  requirements.txt  whisper_server.py
.github/workflows/: release.yml
data/: build-oui-database.py  llm-system-prompt.md  oui-database.csv  oui-database.json  oui-database.min.json  oui-threats.json  oui_embedded.rs  threat-intel-research.md
docker/: Dockerfile.cross-amd64  Dockerfile.pi  Dockerfile.steamdeck
docs/: ALERTS.md  BUILD.md  DRONE_DETECTION.md  HACKRF_CAPABILITIES.md  HARDWARE-BOM.md  INSTALL.md  OPENCLAW_INTEGRATION.md  PI_QUICKSTART.md  PI_REQUIREMENTS.md  SIGINTPI_ML_TODO.md  SIGINTPI_SOUNDBOARD_FASTFOOD_TODO.md  TSCM-THREAT-DATABASE.md  drone_rf_signatures.md
scripts/: build-deck.sh  build-pi.sh  cross-compile.sh  docker-dev.sh  hackrf-monitor.sh  install-adb.sh  install-deck.sh  install-pi.sh  install-rayhunter.sh  install-sdr-deck.sh  install-sdr-pi.sh  install-sdr.sh  pi-full-setup.sh  pi-gps-setup.sh  run-mac.sh  run-with-metrics.sh  scrape-soundboard.sh  setup-local-llm.sh  setup-python.sh  setup.sh  steamdeck-launch.sh  steamdeck-status.sh  steamdeck-stop.sh  uninstall-deck.sh  uninstall-pi.sh  whisper-server.service  whisper_server.py  wifi-list.sh  wifi-managed.sh  wifi-monitor.sh
src/: achievements.rs  config.rs  fastfood_rf.rs  main.rs  soundboard.rs  threat_intel.rs
src/alerts/: email.rs  mod.rs  mqtt.rs  signal.rs  sound.rs  telegram.rs  twilio.rs  webhook.rs
src/bluetooth/: ble.rs  mod.rs
src/cloud/: influxdb.rs  mod.rs
src/flipper/: commands.rs  mod.rs  payloads.rs  serial.rs
src/gps/: mod.rs
src/intelligence/: device_analyzer.rs  llm_client.rs  mod.rs
src/learning/: anomaly.rs  baseline.rs  fingerprint.rs  mod.rs
src/meshtastic/: mod.rs
src/ml/: anomaly.rs  classifier.rs  features.rs  mod.rs
src/openclaw/: mod.rs
src/platform/: capabilities.rs  mod.rs
src/power/: mod.rs
src/rayhunter/: mod.rs
src/sdr/: advanced_threats.rs  cellular.rs  consumer_false_positives.rs  consumer_tactical_radios.rs  cots_drones.rs  drone.rs  drone_signatures.rs  energy_weapons.rs  environmental.rs  mod.rs  presets.rs  rtl433.rs  spectrum.rs  tradecraft.rs  trunked.rs  tscm.rs
src/settings/: mod.rs
src/simulation/: mod.rs
src/storage/: mod.rs  oui.rs  schema.sql  sqlite.rs
src/tui/: app.rs  mod.rs  ui.rs
src/web/: api.rs  mod.rs
src/wifi/: attacks.rs  mod.rs  parser.rs  scanner.rs  signatures.rs
static/: index.html  settings.html
static/images/: .gitkeep  README.md
steamdeck/: README-STEAMDECK.md  channel-hop.service  channel-hop.sh  launch-in-steam.sh  setup-steamdeck.sh  sigint-deck.desktop  zzz-sigint-wifi.sudoers
systemd/: sigint-pi.service
tests/: tscm_sweep_test.rs
