[package]
name = "sigint-pi"
version = "0.3.0"
edition = "2021"
authors = ["naanprofit"]
description = "Portable SIGINT security device for Raspberry Pi"
license = "GPL-3.0-or-later"
repository = "https://github.com/naanprofit/sigint-pi"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Packet capture
pcap = "2.0"

# BLE scanning
btleplug = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Web server (pin to versions compatible with Rust 1.85)
actix-web = "=4.9.0"
actix-multipart = "0.7"
actix-files = "=0.6.6"
actix-http = "=3.9.0"
futures = "0.3"

# MQTT
rumqttc = "0.24"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# GPS
gpsd_proto = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"      # Pin to avoid edition2024 issue
home = "=0.5.9"       # Pin to avoid edition2024 issue  
getrandom = "=0.2.15" # Pin to avoid edition2024 issue

# HTTP client (for Twilio, email)
reqwest = { version = "0.11", features = ["json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# MAC address parsing
macaddr = "1.0"

# Hex encoding
hex = "0.4"

# UUID generation
uuid = { version = "1.7", features = ["v4"] }

# Radiotap header parsing (802.11)
radiotap = "1.3"

# Channel for async messaging
async-channel = "2.2"

# Geospatial calculations
geo = "0.28"

# Config directory
dirs = "5.0"

# Base64 encoding (for audio data)
base64 = "0.22"

# Lazy static for global data
lazy_static = "1.4"
once_cell = "1.19"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# ML inference (ONNX Runtime)
ort = { version = "2.0.0-rc.12", optional = true }

# FFT for signal feature extraction
rustfft = "6"

# Numeric arrays for ML feature vectors
ndarray = "0.16"

[features]
default = []
simulation = ["rand"]
flipper = ["serialport"]
ml = ["ort"]

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.serialport]
version = "4"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-pi]
inherits = "release"
target = "armv7-unknown-linux-gnueabihf"
